# openprinttag-database

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  schema_version.conf
.github/workflows/: check-manifest-not-modified.yml  migrate-images.yml  test.yml  ui-editor-checks.yml  update-manifest.yml  validate.yml
data/: manifest.yaml
data/brands/: 3djake.yaml  addnorth.yaml  artillery.yaml  bambulab.yaml  deeplee.yaml  esun.yaml  fa768e92-f031-5c7d-a8b4-f7b5b51c4b85.yaml  gratkit.yaml  inslogic.yaml  kexcelled.yaml  mexico-makers.yaml  noctuo.yaml  polymaker.yaml  printonion.yaml  prusament.yaml  qidi.yaml  snapmaker.yaml  stronghero3d.yaml  ttyt3d.yaml
data/material-containers/: amolen-spool-1kg.yaml  anycubic-plastic-spool-1kg.yaml  cc3d-plastic-spool-black-1kg.yaml  elegoo-cardboard-spool-1kg.yaml  elegoo-plastic-spool-1kg.yaml  eryone-cardboard-spool-1kg.yaml  eryone-tpu-spool-1kg.yaml  esun-plastic-spool-transparent-1kg.yaml  hatchbox-spool-1kg.yaml  inslogic-reusable-spool-1kg.yaml  old-prusament-high-temperature-spool-1kg.yaml  old-prusament-high-temperature-spool-with-bolts-1kg.yaml  old-prusament-spool-1kg.yaml  old-prusament-spool-2kg.yaml  polymaker-spool-1kg.yaml  prusament-high-temperature-spool-1kg.yaml  prusament-spool-1kg.yaml  prusament-spool-2kg.yaml  sunlu-reusable-spool-1kg.yaml  ttyt3d-plastic-spool-1kg.yaml
data/material-packages/addnorth/: add-north-e-pla-army-green-1kg.yaml  (+359 more)
scripts/: delete_images.py  migrate_images.py  update_manifest.py  validate_json_schema.py
tests/: test_delete_images.py  test_migrate.py
(+5934 files in other folders)
